--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Hello</h2>
+<html>
+	<head>
+		<title>Piyush Jaiswal</title>
+	</head>
+	<body>
+		<a href="https://app.daily.dev/jarden"><img src="https://api.daily.dev/devcards/29741ef7a0a047db963cc1f6543ed241.png?r=q7v" width="400" alt="Piyush Jaiswal's Dev Card"/></a>
+	</body>
+</html>
