Canvas Element class pattern added

--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
-<html>
-	<head>
-		<title>Piyush Jaiswal</title>
-	</head>
-	<body>
-		<a href="https://app.daily.dev/jarden"><img src="https://api.daily.dev/devcards/29741ef7a0a047db963cc1f6543ed241.png?r=q7v" width="400" alt="Piyush Jaiswal's Dev Card"/></a>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Alpine JS CDN-->
+	<!-- <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script> -->
+	<!-- Tailwind CSS CDN-->
+	<!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
+	<!-- Javascript modules-->
+	<script type="module" src="./index.js"></script>
+	<link rel="stylesheet" href="./main.css" />
+	<title>Piyush Jaiswal</title>
+</head>
+<body>
+
+	<canvas id="that-is-it">
+
+	</canvas>
+	
+</body>
 </html>
