--- a/index.html
+++ b/index.html
@@ -18,20 +18,7 @@
 	<title>Piyush Jaiswal</title>
 </head>
 <body>
-		<!-- <section class="w-full h-screen relative off-white">
-			<div class="absolute z-0">
-
-			</div>
-			<div class="absolute z-10 flex flex-col">
-				<div class="flex flex-row-reverse w-full h-12 md:h-20 lg:h-24 pr-8 pt-6">
-					<svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10" viewBox="0 0 24 24"><path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z"/></svg>
-				</div>
-				<div class="w-screen flex flex-row justify-center mt-20">
-					<p class="text-2xl md:text-4xl lg:text-8xl font-medium font-azeret">PIYUSH JAISWAL</p>
-				</div>
-			</div>
-		</section> -->
-		<section class="w-full h-screen">
+		<section class="w-full h-screen solar">
 			<canvas id="that-is-it" class="w-full h-full"></canvas>
 		</section>
 </body>
